section 5 overflow issue solved

--- a/style.css
+++ b/style.css
@@ -121,7 +121,6 @@ header .fa-apple{
   align-items: center;
   justify-content: start;
   background: linear-gradient(to right, black, black);
-  height: 95vh;
   padding: 45px 0;
 }
 
